--- a/app/src/views/work.pug
+++ b/app/src/views/work.pug
@@ -7,4 +7,6 @@ block content
   .card.card-login.mx-auto.mt-5
     .card-header CoinAuth is ongoing
     .card-body
-      p Please do not close this page, or you will be logged out
+      p Please do not close or logout this page while in game, or you will be logged out from the game.
+      .text-center
+        a.d-block.small.mt-3(href='#' onclick='return logoutFirebase();') Logout
